# buildathon

./: .gitignore  .replit  README-MONGODB.md  README.md  app.py  config.py  demo_app.py  demo_main.py  main.py  models.py  package-lock.json  package.json  pyproject.toml  replit.md
.claude/: settings.local.json
Code_Editor/: cookies.txt  package-lock.json  package.json  replit.md
Code_Editor/attached_assets/: Pasted--Real-Time-Multiplayer-Code-Editor-Complete-Implementation-Create-a-full-stack-real-time-collabo-1755134940791_1755134940792.txt
Code_Editor/server/: auth-routes.ts  index.ts  mongodb-storage.ts  routes.ts  storage.ts
Code_Editor/shared/: mongodb-schema.ts  schema.ts
Employee Engagement Pulse/: PRD_Employee_Engagement_Pulse.md  README.md  cookies.txt  package.json  setup.sh  test-cookies.txt  vercel.json
Employee Engagement Pulse/client/: index.html  package-lock.json  package.json  vite.config.js
Employee Engagement Pulse/server/: .env  package-lock.json  package.json
Skeleton Code/: package-lock.json  package.json
api/: graph.py  ingestion.py  qa.py
attached_assets/: Pasted--Project-4-Codebase-Time-Machine-PRD-Filename-project-4-codebase-time-machine-PRD-md--1755366228810_1755366228812.txt  Pasted--Project-5-Universal-Knowledge-Graph-Builder-PRD-1-Executive-Summary-Convert-a-small-docum-1755379151391_1755379151392.txt
server/: .env  index.ts  package-lock.json  routes.ts  storage-mongo.ts  storage.ts
services/: mongodb_service.py  neo4j_service.py  nlp_service.py  web_scraper.py
shared/: schema.ts
templates/: index.html
(+71 files in other folders)
